tests/custom-5.1.2/noncompliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.1.2-noncompliant
policies:
  - ../../../kyverno-policies/custom-5.1.2.yaml
resources:
  - serviceaccount.yaml
results:
  - policy: custom-5-1-2-minimize-ecr-access
    rule: check-minimize-ecr-access
    resources:
      - noncompliant-sa
    kind: ServiceAccount
    result: fail
